src/runtime/PascalSParser.cpp

// Generated from /usr/src/app/src/PascalSParser.g4 by ANTLR 4.9.3


#include "PascalSParserVisitor.h"

#include "PascalSParser.h"


using namespace antlrcpp;
using namespace antlr4;

PascalSParser::PascalSParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PascalSParser::~PascalSParser() {
  delete _interpreter;
}

std::string PascalSParser::getGrammarFileName() const {
  return "PascalSParser.g4";
}

const std::vector<std::string>& PascalSParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PascalSParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

PascalSParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::ProgramHeadingContext* PascalSParser::ProgramContext::programHeading() {
  return getRuleContext<PascalSParser::ProgramHeadingContext>(0);
}

PascalSParser::BlockContext* PascalSParser::ProgramContext::block() {
  return getRuleContext<PascalSParser::BlockContext>(0);
}

tree::TerminalNode* PascalSParser::ProgramContext::DOT() {
  return getToken(PascalSParser::DOT, 0);
}


size_t PascalSParser::ProgramContext::getRuleIndex() const {
  return PascalSParser::RuleProgram;
}


antlrcpp::Any PascalSParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::ProgramContext* PascalSParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, PascalSParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    programHeading();
    setState(139);
    block();
    setState(140);
    match(PascalSParser::DOT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeadingContext ------------------------------------------------------------------

PascalSParser::ProgramHeadingContext::ProgramHeadingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::ProgramHeadingContext::PROGRAM() {
  return getToken(PascalSParser::PROGRAM, 0);
}

PascalSParser::IdentifierContext* PascalSParser::ProgramHeadingContext::identifier() {
  return getRuleContext<PascalSParser::IdentifierContext>(0);
}

tree::TerminalNode* PascalSParser::ProgramHeadingContext::SEMI() {
  return getToken(PascalSParser::SEMI, 0);
}

tree::TerminalNode* PascalSParser::ProgramHeadingContext::LPAREN() {
  return getToken(PascalSParser::LPAREN, 0);
}

PascalSParser::IdentifierListContext* PascalSParser::ProgramHeadingContext::identifierList() {
  return getRuleContext<PascalSParser::IdentifierListContext>(0);
}

tree::TerminalNode* PascalSParser::ProgramHeadingContext::RPAREN() {
  return getToken(PascalSParser::RPAREN, 0);
}


size_t PascalSParser::ProgramHeadingContext::getRuleIndex() const {
  return PascalSParser::RuleProgramHeading;
}


antlrcpp::Any PascalSParser::ProgramHeadingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitProgramHeading(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::ProgramHeadingContext* PascalSParser::programHeading() {
  ProgramHeadingContext *_localctx = _tracker.createInstance<ProgramHeadingContext>(_ctx, getState());
  enterRule(_localctx, 2, PascalSParser::RuleProgramHeading);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(PascalSParser::PROGRAM);
    setState(143);
    identifier();
    setState(148);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PascalSParser::LPAREN) {
      setState(144);
      match(PascalSParser::LPAREN);
      setState(145);
      identifierList();
      setState(146);
      match(PascalSParser::RPAREN);
    }
    setState(150);
    match(PascalSParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

PascalSParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::IdentifierContext::IDENT() {
  return getToken(PascalSParser::IDENT, 0);
}


size_t PascalSParser::IdentifierContext::getRuleIndex() const {
  return PascalSParser::RuleIdentifier;
}


antlrcpp::Any PascalSParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::IdentifierContext* PascalSParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 4, PascalSParser::RuleIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    match(PascalSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

PascalSParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::CompoundStatementContext* PascalSParser::BlockContext::compoundStatement() {
  return getRuleContext<PascalSParser::CompoundStatementContext>(0);
}

std::vector<PascalSParser::ConstantDefinitionPartContext *> PascalSParser::BlockContext::constantDefinitionPart() {
  return getRuleContexts<PascalSParser::ConstantDefinitionPartContext>();
}

PascalSParser::ConstantDefinitionPartContext* PascalSParser::BlockContext::constantDefinitionPart(size_t i) {
  return getRuleContext<PascalSParser::ConstantDefinitionPartContext>(i);
}

std::vector<PascalSParser::TypeDefinitionPartContext *> PascalSParser::BlockContext::typeDefinitionPart() {
  return getRuleContexts<PascalSParser::TypeDefinitionPartContext>();
}

PascalSParser::TypeDefinitionPartContext* PascalSParser::BlockContext::typeDefinitionPart(size_t i) {
  return getRuleContext<PascalSParser::TypeDefinitionPartContext>(i);
}

std::vector<PascalSParser::VariableDeclarationPartContext *> PascalSParser::BlockContext::variableDeclarationPart() {
  return getRuleContexts<PascalSParser::VariableDeclarationPartContext>();
}

PascalSParser::VariableDeclarationPartContext* PascalSParser::BlockContext::variableDeclarationPart(size_t i) {
  return getRuleContext<PascalSParser::VariableDeclarationPartContext>(i);
}

std::vector<PascalSParser::ProcedureAndFunctionDeclarationPartContext *> PascalSParser::BlockContext::procedureAndFunctionDeclarationPart() {
  return getRuleContexts<PascalSParser::ProcedureAndFunctionDeclarationPartContext>();
}

PascalSParser::ProcedureAndFunctionDeclarationPartContext* PascalSParser::BlockContext::procedureAndFunctionDeclarationPart(size_t i) {
  return getRuleContext<PascalSParser::ProcedureAndFunctionDeclarationPartContext>(i);
}


size_t PascalSParser::BlockContext::getRuleIndex() const {
  return PascalSParser::RuleBlock;
}


antlrcpp::Any PascalSParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::BlockContext* PascalSParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, PascalSParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PascalSParser::CONST)
      | (1ULL << PascalSParser::FUNCTION)
      | (1ULL << PascalSParser::PROCEDURE)
      | (1ULL << PascalSParser::TYPE)
      | (1ULL << PascalSParser::VAR))) != 0)) {
      setState(158);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case PascalSParser::CONST: {
          setState(154);
          constantDefinitionPart();
          break;
        }

        case PascalSParser::TYPE: {
          setState(155);
          typeDefinitionPart();
          break;
        }

        case PascalSParser::VAR: {
          setState(156);
          variableDeclarationPart();
          break;
        }

        case PascalSParser::FUNCTION:
        case PascalSParser::PROCEDURE: {
          setState(157);
          procedureAndFunctionDeclarationPart();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(162);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(163);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionPartContext ------------------------------------------------------------------

PascalSParser::ConstantDefinitionPartContext::ConstantDefinitionPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::ConstantDefinitionPartContext::CONST() {
  return getToken(PascalSParser::CONST, 0);
}

std::vector<PascalSParser::ConstantDefinitionContext *> PascalSParser::ConstantDefinitionPartContext::constantDefinition() {
  return getRuleContexts<PascalSParser::ConstantDefinitionContext>();
}

PascalSParser::ConstantDefinitionContext* PascalSParser::ConstantDefinitionPartContext::constantDefinition(size_t i) {
  return getRuleContext<PascalSParser::ConstantDefinitionContext>(i);
}

std::vector<tree::TerminalNode *> PascalSParser::ConstantDefinitionPartContext::SEMI() {
  return getTokens(PascalSParser::SEMI);
}

tree::TerminalNode* PascalSParser::ConstantDefinitionPartContext::SEMI(size_t i) {
  return getToken(PascalSParser::SEMI, i);
}


size_t PascalSParser::ConstantDefinitionPartContext::getRuleIndex() const {
  return PascalSParser::RuleConstantDefinitionPart;
}


antlrcpp::Any PascalSParser::ConstantDefinitionPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstantDefinitionPart(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::ConstantDefinitionPartContext* PascalSParser::constantDefinitionPart() {
  ConstantDefinitionPartContext *_localctx = _tracker.createInstance<ConstantDefinitionPartContext>(_ctx, getState());
  enterRule(_localctx, 8, PascalSParser::RuleConstantDefinitionPart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(165);
    match(PascalSParser::CONST);
    setState(169); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(166);
      constantDefinition();
      setState(167);
      match(PascalSParser::SEMI);
      setState(171); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == PascalSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

PascalSParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PascalSParser::IdentifierContext* PascalSParser::ConstantDefinitionContext::identifier() {
  return getRuleContext<PascalSParser::IdentifierContext>(0);
}

tree::TerminalNode* PascalSParser::ConstantDefinitionContext::EQUAL() {
  return getToken(PascalSParser::EQUAL, 0);
}

PascalSParser::ConstantContext* PascalSParser::ConstantDefinitionContext::constant() {
  return getRuleContext<PascalSParser::ConstantContext>(0);
}


size_t PascalSParser::ConstantDefinitionContext::getRuleIndex() const {
  return PascalSParser::RuleConstantDefinition;
}


antlrcpp::Any PascalSParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::ConstantDefinitionContext* PascalSParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, PascalSParser::RuleConstantDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    identifier();
    setState(174);
    match(PascalSParser::EQUAL);
    setState(175);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

PascalSParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::ConstantContext::getRuleIndex() const {
  return PascalSParser::RuleConstant;
}

void PascalSParser::ConstantContext::copyFrom(ConstantContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConstIdentifierContext ------------------------------------------------------------------

PascalSParser::IdentifierContext* PascalSParser::ConstIdentifierContext::identifier() {
  return getRuleContext<PascalSParser::IdentifierContext>(0);
}

PascalSParser::ConstIdentifierContext::ConstIdentifierContext(ConstantContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::ConstIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstIdentifier(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstSignedNumberContext ------------------------------------------------------------------

PascalSParser::SignContext* PascalSParser::ConstSignedNumberContext::sign() {
  return getRuleContext<PascalSParser::SignContext>(0);
}

PascalSParser::UnsignedNumberContext* PascalSParser::ConstSignedNumberContext::unsignedNumber() {
  return getRuleContext<PascalSParser::UnsignedNumberContext>(0);
}

PascalSParser::ConstSignedNumberContext::ConstSignedNumberContext(ConstantContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::ConstSignedNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstSignedNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstStringContext ------------------------------------------------------------------

PascalSParser::StringContext* PascalSParser::ConstStringContext::string() {
  return getRuleContext<PascalSParser::StringContext>(0);
}

PascalSParser::ConstStringContext::ConstStringContext(ConstantContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::ConstStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstUnsignedNumberContext ------------------------------------------------------------------

PascalSParser::UnsignedNumberContext* PascalSParser::ConstUnsignedNumberContext::unsignedNumber() {
  return getRuleContext<PascalSParser::UnsignedNumberContext>(0);
}

PascalSParser::ConstUnsignedNumberContext::ConstUnsignedNumberContext(ConstantContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::ConstUnsignedNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstUnsignedNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstSignIdentifierContext ------------------------------------------------------------------

PascalSParser::SignContext* PascalSParser::ConstSignIdentifierContext::sign() {
  return getRuleContext<PascalSParser::SignContext>(0);
}

PascalSParser::IdentifierContext* PascalSParser::ConstSignIdentifierContext::identifier() {
  return getRuleContext<PascalSParser::IdentifierContext>(0);
}

PascalSParser::ConstSignIdentifierContext::ConstSignIdentifierContext(ConstantContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::ConstSignIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitConstSignIdentifier(this);
  else
    return visitor->visitChildren(this);
}
PascalSParser::ConstantContext* PascalSParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 12, PascalSParser::RuleConstant);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(186);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<PascalSParser::ConstUnsignedNumberContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(177);
      unsignedNumber();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<PascalSParser::ConstSignedNumberContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(178);
      sign();
      setState(179);
      unsignedNumber();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<PascalSParser::ConstIdentifierContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(181);
      identifier();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PascalSParser::ConstSignIdentifierContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(182);
      sign();
      setState(183);
      identifier();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<PascalSParser::ConstStringContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(185);
      string();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnsignedNumberContext ------------------------------------------------------------------

PascalSParser::UnsignedNumberContext::UnsignedNumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::UnsignedNumberContext::getRuleIndex() const {
  return PascalSParser::RuleUnsignedNumber;
}

void PascalSParser::UnsignedNumberContext::copyFrom(UnsignedNumberContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnsignedNumberRealContext ------------------------------------------------------------------

PascalSParser::UnsignedRealContext* PascalSParser::UnsignedNumberRealContext::unsignedReal() {
  return getRuleContext<PascalSParser::UnsignedRealContext>(0);
}

PascalSParser::UnsignedNumberRealContext::UnsignedNumberRealContext(UnsignedNumberContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::UnsignedNumberRealContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitUnsignedNumberReal(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnsignedNumberIntegerContext ------------------------------------------------------------------

PascalSParser::UnsignedIntegerContext* PascalSParser::UnsignedNumberIntegerContext::unsignedInteger() {
  return getRuleContext<PascalSParser::UnsignedIntegerContext>(0);
}

PascalSParser::UnsignedNumberIntegerContext::UnsignedNumberIntegerContext(UnsignedNumberContext *ctx) { copyFrom(ctx); }


antlrcpp::Any PascalSParser::UnsignedNumberIntegerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitUnsignedNumberInteger(this);
  else
    return visitor->visitChildren(this);
}
PascalSParser::UnsignedNumberContext* PascalSParser::unsignedNumber() {
  UnsignedNumberContext *_localctx = _tracker.createInstance<UnsignedNumberContext>(_ctx, getState());
  enterRule(_localctx, 14, PascalSParser::RuleUnsignedNumber);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(190);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PascalSParser::NUM_INT: {
        _localctx = _tracker.createInstance<PascalSParser::UnsignedNumberIntegerContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(188);
        unsignedInteger();
        break;
      }

      case PascalSParser::NUM_REAL: {
        _localctx = _tracker.createInstance<PascalSParser::UnsignedNumberRealContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(189);
        unsignedReal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnsignedIntegerContext ------------------------------------------------------------------

PascalSParser::UnsignedIntegerContext::UnsignedIntegerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::UnsignedIntegerContext::NUM_INT() {
  return getToken(PascalSParser::NUM_INT, 0);
}


size_t PascalSParser::UnsignedIntegerContext::getRuleIndex() const {
  return PascalSParser::RuleUnsignedInteger;
}


antlrcpp::Any PascalSParser::UnsignedIntegerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitUnsignedInteger(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::UnsignedIntegerContext* PascalSParser::unsignedInteger() {
  UnsignedIntegerContext *_localctx = _tracker.createInstance<UnsignedIntegerContext>(_ctx, getState());
  enterRule(_localctx, 16, PascalSParser::RuleUnsignedInteger);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    match(PascalSParser::NUM_INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnsignedRealContext ------------------------------------------------------------------

PascalSParser::UnsignedRealContext::UnsignedRealContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalSParser::UnsignedRealContext::NUM_REAL() {
  return getToken(PascalSParser::NUM_REAL, 0);
}


size_t PascalSParser::UnsignedRealContext::getRuleIndex() const {
  return PascalSParser::RuleUnsignedReal;
}


antlrcpp::Any PascalSParser::UnsignedRealContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalSParserVisitor*>(visitor))
    return parserVisitor->visitUnsignedReal(this);
  else
    return visitor->visitChildren(this);
}

PascalSParser::UnsignedRealContext* PascalSParser::unsignedReal() {
  UnsignedRealContext *_localctx = _tracker.createInstance<UnsignedRealContext>(_ctx, getState());
  enterRule(_localctx, 18, PascalSParser::RuleUnsignedReal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(PascalSParser::NUM_REAL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

PascalSParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PascalSParser::SignContext::getRuleIndex() const {
  return PascalSParser::RuleSign;
}
